Fixed spacing of footer links on mobile

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -8362,6 +8362,9 @@ SlideUpTopBar for Foundation styles
   #footer-contain {
     text-align: center;
   }
+  #footer-contain div.small-12:first-child {
+    margin-bottom: 40px;
+  }
 }
 
 #footer-contain a {
